--- a/main.html
+++ b/main.html
@@ -33,9 +33,9 @@
                     <td>
                         <ul>
                             
-                            <li>List items</li>
-                            <li>List items</li>
-                            <li>List items</li>
+                            <li>List item 1</li>
+                            <li>List item 1</li>
+                            <li>List item 1</li>
                         </ul>
                     </td>
                 </tr>
