--- a/main.html
+++ b/main.html
@@ -60,8 +60,8 @@
             <tr>
                 <th>Nested Table 4</th>
             </tr>
-            <tr id="g">
-                <th>HTML</th>
+            <tr>
+                <th id="g">HTML</th>
             </tr>
         </table>
        </td>
