--- a/main.html
+++ b/main.html
@@ -61,7 +61,7 @@
                 <th>Nested Table 4</th>
             </tr>
             <tr>
-                <th id="g">HTML</th>
+                <th style="background-color:black;color:white">HTML</th>
             </tr>
         </table>
        </td>
